--- a/.github/workflows/first-action.yml
+++ b/.github/workflows/first-action.yml
@@ -5,6 +5,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Print Greeting
-        run: echo "Hellow World"
+        run: | 
+            echo "Hellow World"
+            echo "How ya doin?"
       - name: Pring goodbye
         run: echo "Done - bye!"
